fixed overflow and word-break on instrument names on pattern editor

--- a/css/pattern.css
+++ b/css/pattern.css
@@ -44,6 +44,11 @@ input.smallinput {
   background-color: black;
 }
 
+.pattern-drop-lateral p {
+  word-break: break-word;
+  overflow: hidden;
+}
+
 .enabled-instrument .pattern-drop-lateral {
   background-color: white;
   color: black;
